themes/exeal/static/assets/css/main.css
/* ... */
p.taxes {
	color: #707070;
	font-size: 0.75em;
}

.carousel-indicators {
	display: inline-block;
	margin-right: 1em;
	margin-left: 0px;
	position: relative;
	bottom: 0px;
}

.carousel-indicators li {
	display: inline-block;
	width: 10px;
	height: 10px;
	margin: 10px;
	text-indent: 0;
	cursor: pointer;
	border: none;
	border-radius: 50%;
	position: relative;
	top: 0.15em;
}

.carousel-indicators.carousel-testimonials li {
	background-color: #D0D0D0;
}

.carousel-indicators.carousel-testimonials .active {
	background-color: #182935;
}

.avatar-with-name {
	margin-top: 1em;
	margin-bottom: 1em;
}

.avatar-with-name > * {
	vertical-align: middle;
}

.avatar-with-name .customer-name {
	display: inline-block;
}

.avatar-with-name p {
	margin: 0px;
	color: #707070;
}

@media (min-width: 992px) {
	.avatar-with-name p {
		text-align: left;
		margin-left: 1.5em;
	}
}

.carousel-indicators-parent {
	margin-top: 1.5em;
	text-align: center;
}

.carousel {
	font-family: 'Gopher Regular', 'Work Sans', sans-serif;
	font-size: 1.3em;
}

@media (max-width: 992px) {
	.avatar-with-name .customer-name {
		display: block;
		margin-top: 1em;
	}
}

p.price {
	font-family: 'Gopher Regular', 'Work Sans', sans-serif;
	color: #F1FFF9;
	font-size: 6em;
	margin-top: 3rem;
	margin-bottom: 3rem;
	-webkit-text-stroke-width: 3px; 
	-webkit-text-stroke-color: #1fe589; 
}

p.price sup {
	font-size: 3rem;
}

@media (min-width: 1200px) {
	div.price-box-left {
		margin-right: 2em;
	}

	div.price-box-right {
		margin-left: 2em;
	}
}

a.nav-button {
	display: block;
	background-color: #E6AD1C;
	font-family: 'Gopher Regular', 'Work Sans', sans-serif;
	text-decoration: none;
	width: fit-content;
	justify-content: center;
	align-items: center;
	padding-left: 1em !important;
	padding-right: 1em !important;
	color: #182935 !important;
	border-radius: 2rem;
}

div.vertical-center {
	display: flex;
	align-items: center;
}

div.horizontal-center {
	display: flex;
	justify-content: center;
}

div.thank-you-hero {
	height: 25rem;
}

img.client-logo {
	padding: 1.5rem;
	max-width: 10rem;
	filter: grayscale(100%);
	opacity: 0.5;
}

div.course-card {
	box-shadow: 0.5rem 0.5rem 1rem -1rem rgba(0,0,0,0.75);
}

div.course-header {
	background-image: url('/assets/img/blog/posts/pain-developer.jpeg');
  background-size: cover;
  background-position: center;
	background-repeat: no-repeat;
	min-height: 16rem;
}

div.course-body {
	padding: 1.5rem 2.5rem;
}

.course-body h3 {
	font-size: 1.5em;
	font-style: normal;
	margin-bottom: 1.25rem;
}

.course-body p.level {
	color: #909090;
	font-size: 1em;
	font-family: 'Gopher Regular', 'Work Sans', sans-serif;
	margin-bottom: 1.25rem;
	margin-top: 0rem;
}

.course-body p.description {
	color: #707070;
	font-size: 1rem;
	margin-bottom: 1.25rem;
	margin-top: 0rem;
	line-height: 150%;
}

.course-body li {
	color: #909090;
	font-size: 0.85rem;
	font-family: 'Gopher Regular', 'Work Sans', sans-serif;
	margin-bottom: 0.5rem;
	margin-top: 0rem;
}

.courses-tagline {
	background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
	background-image: url('/assets/img/blog/blog-cover-1.png');
}

.courses-tagline-inner {
	height: 100%;
  padding: 2rem;
  color: #FFFFFF;
  height: 22em;
  margin-bottom: 1em;
  position: relative;
}

.courses-tagline h1 {
	margin-left: 2rem;
	font-family: 'Gopher Regular', 'Work Sans', sans-serif;
  font-size: 2rem;
  max-width: 25rem;
}

